syncroot/base/umbraco/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umbraco
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: umbraco
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
